# ray-tracing

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: maths.md
include/renderer/: renderer.hpp  types.hpp
include/scene/: scene.hpp  scene_loader.hpp
include/skybox/: skybox.hpp
scenes/: cornell_box_1.json  cornell_box_2.json  cornell_box_3.json  cornell_box_4.json  cornell_box_5.json  default_scene.json  specular_1.json  specular_2.json
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/camera/: camera.cpp
src/renderer/: renderer.cpp
src/scene/: scene.cpp  scene_loader.cpp
src/skybox/: skybox.cpp
